crates/gpui-form-prototyping-core/src/implementations/snapshots/gpui_form_prototyping_core__implementations__shape__tests__shape_generator_clear_converts_source_default_to_form_value.snap
---
source: crates/gpui-form-prototyping-core/src/implementations/shape.rs
expression: "pretty_tokens(generated.handlers[0].clone())"
---
fn on_birth_date_shape_event(
    &mut self,
    state: &Entity<ComponentStateOf<gpui_form_collection::date_picker::DatePicker>>,
    event: &ComponentEventOf<
        gpui_form_collection::date_picker::DatePicker,
        chrono::NaiveDate,
    >,
    _window: &mut Window,
    _cx: &mut Context<Self>,
) {
    let form_change = {
        let state = state.read(_cx);
        form_value_change::<
            gpui_form_collection::date_picker::DatePicker,
            chrono::NaiveDate,
        >(state, event)
    };
    match form_change {
        FormValueChange::Set(value) => {
            self.current_data.birth_date = value;
        }
        FormValueChange::Clear => {
            self.current_data.birth_date = (to_form_datetime)(
                Timestamp::from_micros_since_unix_epoch(0),
            );
        }
        FormValueChange::Unchanged => {}
    }
}
