crates/gpui-form-prototyping-core/src/implementations/snapshots/gpui_form_prototyping_core__implementations__shape__tests__shape_generator_clear_resets_direct_value_storage_to_declared_default.snap
---
source: crates/gpui-form-prototyping-core/src/implementations/shape.rs
expression: "pretty_tokens(generated.handlers[0].clone())"
---
fn on_code_shape_event(
    &mut self,
    state: &Entity<GpuiComponentStateOf<crate::shapes::OtpInput<String>>>,
    event: &GpuiComponentEventOf<crate::shapes::OtpInput<String>, String>,
    _window: &mut Window,
    _cx: &mut Context<Self>,
) {
    let form_change = {
        let state = state.read(_cx);
        value_change::<crate::shapes::OtpInput<String>, String>(state, event)
    };
    match form_change {
        ValueChange::Set(value) => {
            self.current_data.code = value;
        }
        ValueChange::Clear => {
            self.current_data.code = String::from("123456");
        }
        ValueChange::Unchanged => {}
    }
}
