crates/gpui-form-prototyping-core/src/implementations/snapshots/gpui_form_prototyping_core__implementations__shape__tests__shape_generator_emits_component_call_when_component_known.snap
---
source: crates/gpui-form-prototyping-core/src/implementations/shape.rs
expression: pretty_tokens(tokens)
---
fn __snapshot() {
    __snapshot
        .child(
            field()
                .label({
                    let message = DemoLabelVariants::Tags;
                    gpui_es_fluent::localize_message(cx, &message)
                })
                .description_fn({
                    let description = {
                        let message = DemoDescriptionVariants::Tags;
                        gpui_es_fluent::localize_message(cx, &message)
                    };
                    move |_, _| {
                        div()
                            .flex()
                            .flex_col()
                            .gap_1()
                            .child(div().child(description.clone()))
                    }
                })
                .child(
                    <<crate::shapes::TagsInputShape as gpui_form::runtime::shape::ComponentShape>::RenderComponent as gpui_form::runtime::shape::ComponentRender<
                        <crate::shapes::TagsInputShape as gpui_form::runtime::shape::ComponentShape>::State,
                    >>::new(&self.fields.tags),
                ),
        );
}
