crates/gpui-form-prototyping-core/src/implementations/snapshots/gpui_form_prototyping_core__implementations__shape__tests__shape_generator_initializes_form_fields_struct.snap
---
source: crates/gpui-form-prototyping-core/src/implementations/shape.rs
expression: pretty_tokens(tokens)
---
fn __snapshot() {
    let _ = __Snapshot { tags };
}
