crates/gpui-form-prototyping-core/src/implementations/snapshots/gpui_form_prototyping_core__implementations__shape__tests__shape_generator_initializes_state_entity.snap
---
source: crates/gpui-form-prototyping-core/src/implementations/shape.rs
expression: pretty_tokens(tokens)
---
fn __snapshot() {
    let tags_shape = cx.new(|cx| DemoFormComponents::tags_shape(window, cx));
}
