crates/gpui-form-prototyping-core/src/implementations/snapshots/gpui_form_prototyping_core__implementations__shape__tests__shape_generator_renders_generic_component_type_without_fluent.snap
---
source: crates/gpui-form-prototyping-core/src/implementations/shape.rs
expression: pretty_tokens(tokens)
---
fn __snapshot() {
    __snapshot
        .child(
            field()
                .label("Tags")
                .description_fn({
                    let description = "Tags";
                    move |_, _| {
                        div()
                            .flex()
                            .flex_col()
                            .gap_1()
                            .child(div().child(description.clone()))
                    }
                })
                .child(
                    <gpui_component::combobox::Combobox<
                        _,
                    >>::new(&self.fields.tags_combobox),
                ),
        );
}
