crates/gpui-form-prototyping-core/src/implementations/snapshots/gpui_form_prototyping_core__implementations__shape__tests__shape_generator_uses_declared_suffix_for_component_names_created.snap
---
source: crates/gpui-form-prototyping-core/src/implementations/shape.rs
expression: pretty_tokens(created)
---
fn __snapshot() {
    let country_select = cx.new(|cx| DemoFormComponents::country_select(window, cx));
}
