crates/gpui-form-prototyping-core/src/implementations/snapshots/gpui_form_prototyping_core__implementations__shape__tests__shape_generator_uses_declared_suffix_for_component_names_handler.snap
---
source: crates/gpui-form-prototyping-core/src/implementations/shape.rs
expression: "pretty_tokens(generated.handlers[0].clone())"
---
fn on_country_select_event(
    &mut self,
    state: &Entity<ComponentStateOf<crate::shapes::CountrySelectShape>>,
    event: &ComponentEventOf<crate::shapes::CountrySelectShape, CountryCode>,
    _window: &mut Window,
    _cx: &mut Context<Self>,
) {
    let form_change = {
        let state = state.read(_cx);
        form_value_change::<crate::shapes::CountrySelectShape, CountryCode>(state, event)
    };
    match form_change {
        FormValueChange::Set(value) => {
            self.current_data.country = Some(value);
        }
        FormValueChange::Clear => {
            self.current_data.country = None;
        }
        FormValueChange::Unchanged => {}
    }
}
